# songcut

./: .gitignore  2026-07-17_plan.txt  CODEX.md  README.md  gui-spec.txt  pyproject.toml  songcut_cli.py
assets/: docs-image-source.pptx
docs/: BUILD.ja.md  BUILD.md  CLI.ja.md  CLI.md  DESIGN.ja.md  DESIGN.md  E2E_TESTING.md  INDEX.md  KEYBOARD_SHORTCUTS.md  USAGE.ja.md  USAGE.md  algorithm.md  gui-spec.md
gui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
gui/electron/: i18n.ts  locale.test.ts  locale.ts  main.ts  preload.cts  project-schema.ts  project-store.test.ts  project-store.ts  waveform-codec.test.ts  waveform-codec.ts
gui/src/: App.tsx  i18n.test.ts  i18n.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
gui/src/components/: BoundaryRefinementDialog.tsx  (+5 more)
packaging/: README_DIST.txt  Start-Songcut.bat  build_dist.ps1  e2e_dist_smoke.js  e2e_scratch_proxy.js  set_windows_exe_icon.py  songcut_api_entry.py  songcut_launcher_entry.py
songcut/: __init__.py  api.py  boundary_refiner.py  cli.py  evaluate.py  features.py  ffmpeg_tools.py  gui_pipeline.py  guide.py  hardware.py  io.py  metadata.py  review.py  scratch_proxy.py  segmenter.py  smart_export.py  timestamps.py  transcription.py  waveform.py  youtube_metadata.py
tests/: test_api.py  test_boundary_refiner.py  test_cli_integration.py  test_evaluate.py  test_ffmpeg_tools.py  test_gui_pipeline.py  test_guide.py  test_hardware.py  test_review.py  test_scratch_proxy.py  test_smart_export.py  test_timestamps.py  test_transcription.py  test_waveform.py  test_youtube_metadata.py
(+31 files in other folders)
